# Arduino-mpu6050

./: .gitignore  CMakeLists.txt  README.md  arduino_mpu6050.ino  main.c  main.cpp  serial.cpp  serial.hpp  serial_read.c  serial_read.h  window.cpp  window.hpp
arduino_mpu6050/: MPU6050_tockn.cpp  MPU6050_tockn.h  arduino_mpu6050.ino
include/: serial.hpp
source/: CMakeLists.txt  serial.cpp
